fixed some compilation problems
git-svn-id: http://cxxsp.svn.sourceforge.net/svnroot/cxxsp/cxxsp/trunk@8 565d9af5-9d0d-0410-8444-e3aae3633638

--- a/common/Makefile
+++ b/common/Makefile
@@ -2,14 +2,14 @@ OBJS=obj/dir.o obj/http.o
 INCLUDE=-Iinclude -Isrc -I$(BOOST_INC) -I. -I$(APACHE_HOME)/include 
 APACHE_LIB_DIR=$(APACHE_HOME)/lib
 LIBS=
-TARGET=libcommon.a libcommon.so
+TARGET=libcxxsp-common.a libcxxsp-common.so
 
 all: obj/ $(TARGET) 
-install: libcommon.so
-	cp libcommon.so $(APACHE_LIB_DIR)
-libcommon.a: $(OBJS)
+install: libcxxsp-common.so
+	cp $^ $(APACHE_LIB_DIR)
+libcxxsp-common.a: $(OBJS)
 	ar cr $@ $(OBJS) 
-libcommon.so: $(OBJS) 
+libcxxsp-common.so: $(OBJS) 
 	$(CXX) -o $@ -shared $^ $(LIBS) 
 obj/:
 	mkdir obj
